# CeloHT

./: .gitattibute  .gitignore  AUTHORS.md  Agent Policy Guide  CELOHT_USER_GUIDE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPLIANCE_MATRIX.md  CONTRIBUTING.md  Cargo.toml  CeloHT Code Of The Conduct   CeloHT Code Of The Conduct.md  CeloHT Funding Proposal  CeloHT Hub  CeloHT Legal & Finance Disclosure  CeloHT One Pager  CeloHT Roadmap 2025-2032  CeloHT Whitepaper   CeloHT audit report   CeloHT-Community  CeloHT-TechPaper  CeloHT.doc  CeloHT.sol  CeloHT_Legal_FAQ.md  CeloHT_Whitepaper.md  DAO_TRANSITION.md  DECISION_LOG.md  DISCLAIMER.md  FUNDING_POLICY.md  Funding-Model.md  GOVERNANCE.md  GOVERNANCE_SUMMARY.md  KYC_AML_Report.md  LEGAL_COMPLIANCE.md  LEGAL_STATUS.md  Licence  MAINTAINERS.md  NGO_OVERVIEW.md  NO_TOKEN_POLICY.md  OPENAPI.md  (+73 more)
.github/: PULL_REQUEST_TEMPLATE.md
CeloHT/: CeloHT-Treasury  PRESS-KIT.md  learning.md
contracts/: CeloHTcUSD.sol
github/workflows/: ci.yml  rust.yml
mvp/: CeloHT.md
scripts/: ci.yaml  deploy.js  export_state.js  reconcile.js  snapshot.sh
