[package]
name = "celoht"
version = "0.1.0"
authors = ["CeloHT Team <celoht@example.com>"]
edition = "2021"
description = "CeloHT: Community-focused blockchain & finance project for Haiti"
license = "MIT OR Apache-2.0"
repository = "https://github.com/CeloHT/CeloHT"
readme = "README.md"
keywords = ["celo", "blockchain", "finance", "haiti"]
categories = ["blockchain", "network-programming"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json", "blocking"] }
tokio = { version = "1.30", features = ["full"] }
web3 = "0.21"
dotenv = "0.15"
log = "0.4"
env_logger = "0.10"
anyhow = "1.0"